# docs/swagger.json
@@ -17,7 +17,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Event"
+                    "events"
                 ],
                 "summary": "Return all events",
                 "responses": {
@@ -28,6 +28,38 @@
                             "items": {
                                 "$ref": "#/definitions/database.Event"
                             }
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/events/{id}": {
+            "get": {
+                "description": "Return a single event",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "events"
+                ],
+                "summary": "Return a single event",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Event ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/database.Event"
                         }
                     }
                 }
